--- a/index.html
+++ b/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="./public/styles/main.css" />
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Title Home -->
+    <title>Proffy | Sua plataforma de estudos online</title>
   </head>
   <body>
-    <div>
-      <h1>First Render</h1>
-      <h1>Second Render</h1>
+    <div id="container">
+      <h1>Proffy</h1>
+
+      <p>Sua plataforma de estudos online.</p>
+
+      <a href="#">Estudar</a>
+      <a href="#">Dar aulas</a>
     </div>
   </body>
 </html>
