--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       />
 
       <div class="buttons-container">
-        <a href="study" class="study">
+        <a href="study.html" class="study">
           <img src="/public//images/icons/study.svg" alt="Estudar" />
           <span>Estudar</span>
         </a>
