--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="./public/styles/main.css" />
+    <link rel="stylesheet" href="./public/styles/partials/page-lading.css" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -19,14 +20,29 @@
     <!-- Title Home -->
     <title>Proffy | Sua plataforma de estudos online</title>
   </head>
-  <body>
+  <body id="page-landing">
     <div id="container">
-      <h1>Proffy</h1>
+      <div class="logo-container">
+        <img src="/public//images/logo.svg" alt="Proffy" />
+        <h2>Sua plataforma de estudos online.</h2>
+      </div>
 
-      <p>Sua plataforma de estudos online.</p>
+      <img
+        src="/public/images/landing.svg"
+        alt="plataforma de estudos online"
+        class="hero-image"
+      />
 
-      <a href="#">Estudar</a>
-      <a href="#">Dar aulas</a>
+      <div class="buttons-container">
+        <a href="study" class="study">
+          <img src="/public//images/icons/study.svg" alt="Estudar" />
+          <span>Estudar</span>
+        </a>
+        <a href="give-classes" class="give-classes">
+          <img src="/public//images/icons/give-classes.svg" alt="Dar aulas" />
+          <span>Dar aulas</span>
+        </a>
+      </div>
     </div>
   </body>
 </html>
