Finished layout mobile first

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
           <span>Dar aulas</span>
         </a>
       </div>
+
+      <p class="total-connections">
+        <span> Total de 200 conexões já realizadas</span>
+        <img src="/public/images/icons/purple-heart.svg" alt="Coração roxo" />
+      </p>
     </div>
   </body>
 </html>
