--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Icon page -->
+    <link
+      rel="shortcut icon"
+      href="/public/images/favicon.png"
+      type="image/png"
+    />
 
     <!-- CSS -->
     <link rel="stylesheet" href="./public/styles/main.css" />
