--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Icon page -->
+    <meta theme="theme-color" content="#8257e5" />
     <link
       rel="shortcut icon"
       href="/public/images/favicon.png"
