--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <img src="/public//images/icons/study.svg" alt="Estudar" />
           <span>Estudar</span>
         </a>
-        <a href="give-classes" class="give-classes">
+        <a href="give-classes.html" class="give-classes">
           <img src="/public//images/icons/give-classes.svg" alt="Dar aulas" />
           <span>Dar aulas</span>
         </a>
