--- a/give-classes.html
+++ b/give-classes.html
@@ -40,6 +40,7 @@
 
         <div class="header-content">
           <strong>Que incrível quer você quer dar aulas.</strong>
+          <p>O primeiro passo, é preencher esse formulário de inscrição.</p>
         </div>
       </header>
 
