--- a/give-classes.html
+++ b/give-classes.html
@@ -44,7 +44,37 @@
         </div>
       </header>
 
-      <main></main>
+      <main>
+        <form id="create-classes">
+          <fieldset>
+            <legend>Seus dados</legend>
+            <div class="input-block">
+              <label for="name">Nome Completo</label>
+              <input type="text" name="name" id="name" required />
+            </div>
+
+            <div class="input-block">
+              <label for="avatar">
+                Link da sua foto
+                <small>(comece com https://)</small>
+              </label>
+              <input type="url" id="avatar" name="avatar" required />
+            </div>
+
+            <div class="input-block">
+              <label for="whatsapp"
+                >Whatsapp <small>(somente número)</small>
+              </label>
+              <input type="number" id="whatsapp" name="whatsapp" required />
+            </div>
+
+            <div class="input-block">
+              <label for="bio">Biografia</label>
+              <textarea name="bio" id="bio" required /></textarea>
+            </div>
+          </fieldset>
+        </form>
+      </main>
     </div>
   </body>
 </html>
