--- a/give-classes.html
+++ b/give-classes.html
@@ -7,6 +7,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="./public/styles/main.css" />
+    <link rel="stylesheet" href="./public/styles/partials/forms.css" />
     <link rel="stylesheet" href="./public/styles/partials/header.css" />
     <link
       rel="stylesheet"
@@ -68,9 +69,9 @@
               <input type="number" id="whatsapp" name="whatsapp" required />
             </div>
 
-            <div class="input-block">
+            <div class="textarea-block">
               <label for="bio">Biografia</label>
-              <textarea name="bio" id="bio" required /></textarea>
+              <textarea name="bio" id="bio" required></textarea>
             </div>
           </fieldset>
         </form>
