--- a/study.html
+++ b/study.html
@@ -8,6 +8,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./public/styles/main.css" />
     <link rel="stylesheet" href="./public/styles/partials/header.css" />
+    <link rel="stylesheet" href="./public/styles/partials/forms.css" />
     <link rel="stylesheet" href="./public/styles/partials/page-study.css" />
 
     <!-- Fonts -->
