--- a/give-classes.html
+++ b/give-classes.html
@@ -102,7 +102,7 @@
             </div>
           </fieldset>
 
-          <fieldset>
+          <fieldset id="schedule-items">
             <legend>
               <span> Horários disponíveis </span>
               <button id="add-time">+ Novo horário</button>
