Function clone hour available with javascript

--- a/give-classes.html
+++ b/give-classes.html
@@ -105,7 +105,9 @@
           <fieldset id="schedule-items">
             <legend>
               <span> Horários disponíveis </span>
-              <button id="add-time">+ Novo horário</button>
+              <button id="add-time" type="button" onclick="">
+                + Novo horário
+              </button>
             </legend>
 
             <div class="schedule-item">
@@ -161,5 +163,7 @@
         </footer>
       </main>
     </div>
+
+    <script src="/public/scripts/main.js"></script>
   </body>
 </html>
