--- a/index.html
+++ b/index.html
@@ -56,5 +56,7 @@
         <img src="/public/images/icons/purple-heart.svg" alt="Coração roxo" />
       </p>
     </div>
+
+    <script src="/public/scripts/main.js"></script>
   </body>
 </html>
