--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- CSS Style sheet -->
+    <link rel="stylesheet" href="/src/styles/home.css">
+
     <!-- Icon page -->
     <meta theme="theme-color" content="#8257e5" />
     <link rel="shortcut icon" href="/src/assets/favicon.png" type="image/png" />
@@ -45,6 +48,7 @@
         <span> Total de 200 conexões já realizadas</span>
         <img src="/src/assets/icons/purple-heart.svg" alt="Coração roxo" />
       </p>
+
     </div>
     </div>
   </body>
