--- a/index.html
+++ b/index.html
@@ -5,5 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Proffy | Sua plataforma de estudos online</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <h1>Proffy</h1>
+      <img src="./public/images/landing.svg" alt="" />
+      <button>Estudar</button>
+      <button>Dar aulas</button>
+    </div>
+  </body>
 </html>
