chore: finished structure home-page

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 
     <!-- Cascade Styles Stylesheet -->
     <link rel="stylesheet" href="./public/styles/main.css" />
-    <link rel="stylesheet" href="./public/styles/home-page.css" />
+    <link rel="stylesheet" href="./public/styles/partials/home-page.css" />
 
     <!-- Fonts -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap"
       rel="stylesheet"
     />
 
@@ -35,12 +35,12 @@
       <div class="buttons-container">
         <a class="study" href="/study">
           <img src="./public/images/icons/study.svg" alt="Estudar" />
-          Estudar
+          <span>Estudar</span>
         </a>
 
         <a class="give-classes" href="/give-classes">
           <img src="./public/images/icons/give-classes.svg" alt="Dar aulas" />
-          Dar aulas
+          <span>Dar aulas</span>
         </a>
       </div>
 
