chore: mobile first

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
 
       <p class="total-connections">
-        Total de 200 conexões já realizadas
+        <span>Total de 200 conexões já realizadas</span>
         <img src="./public/images/icons/purple-heart.svg" alt="Coração roxo" />
       </p>
     </div>
