--- a/study.html
+++ b/study.html
@@ -36,9 +36,8 @@
             <div class="select-block">
               <label for="subject">Matéria</label>
               <select name="subject" id="subject">
-                <option value="" disabled="" hidden="">
-                  Selecione uma opção
-                </option>
+                <option value="" disabled hidden>Selecione uma opção</option>
+
                 <option value="1">Química</option>
                 <option value="2">Artes</option>
                 <option value="3">Biologia</option>
@@ -51,6 +50,28 @@
                 <option value="10">Português</option>
               </select>
             </div>
+
+            <div class="select-block">
+              <label for="weekday">Dia da semana</label>
+              <select name="weekday" id="weekday">
+                <option value="" disabled hidden>Selecione uma opção</option>
+
+                <option value="1">Segunda</option>
+                <option value="2">Terça</option>
+                <option value="3">Quarta</option>
+                <option value="4">Quinta</option>
+                <option value="5">Sexta</option>
+                <option value="6">Sábado</option>
+                <option value="7">Domingo</option>
+              </select>
+            </div>
+
+            <div class="input-block">
+              <label for="time">Horário</label>
+              <input type="time" name="time" id="time" nim="0" max="24" />
+            </div>
+
+            <button type="submit">Filtrar</button>
           </form>
         </div>
       </header>
