chore: page study Layout mobile first

--- a/study.html
+++ b/study.html
@@ -75,6 +75,62 @@
           </form>
         </div>
       </header>
+
+      <main>
+        <article class="teacher-item">
+          <header>
+            <img src="https://github.com/Hugovarellaa.png" alt="" />
+            <div>
+              <strong>Hugo Alves Varella</strong>
+              <span>Química</span>
+            </div>
+          </header>
+          <p>Entusiasta das melhores tecnologias de química avançada.</p>
+          <p>
+            Apaixonado por explodir coisas em laboratório e por mudar a vida das
+            pessoas através de experiências. Mais de 200.000 pessoas já passaram
+            por uma das minhas explosões.
+          </p>
+
+          <footer>
+            <p>
+              Preço/hora
+              <strong>R$ 20,00</strong>
+            </p>
+            <button>
+              <img src="./public/images/icons/whatsapp.svg" alt="" />
+              <span>Entrar em contanto</span>
+            </button>
+          </footer>
+        </article>
+
+        <article class="teacher-item">
+          <header>
+            <img src="https://github.com/Hugovarellaa.png" alt="" />
+            <div>
+              <strong>Hugo Alves Varella</strong>
+              <span>Química</span>
+            </div>
+          </header>
+          <p>Entusiasta das melhores tecnologias de química avançada.</p>
+          <p>
+            Apaixonado por explodir coisas em laboratório e por mudar a vida das
+            pessoas através de experiências. Mais de 200.000 pessoas já passaram
+            por uma das minhas explosões.
+          </p>
+
+          <footer>
+            <p>
+              Preço/hora
+              <strong>R$ 20,00</strong>
+            </p>
+            <button>
+              <img src="./public/images/icons/whatsapp.svg" alt="" />
+              <span>Entrar em contanto</span>
+            </button>
+          </footer>
+        </article>
+      </main>
     </div>
   </body>
 </html>
