chore: navigation in pages

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
       rel="stylesheet"
     />
 
+    <!-- Favicon -->
+    <link
+      rel="shortcut icon"
+      href="./public/images/favicon.png"
+      type="image/png"
+    />
+
     <title>Proffy | Sua plataforma de estudos online</title>
   </head>
   <body id="home-page">
@@ -33,12 +40,12 @@
       />
 
       <div class="buttons-container">
-        <a class="study" href="/study">
+        <a class="study" href="/study.html">
           <img src="./public/images/icons/study.svg" alt="Estudar" />
           <span>Estudar</span>
         </a>
 
-        <a class="give-classes" href="/give-classes">
+        <a class="give-classes" href="/give-classes.html">
           <img src="./public/images/icons/give-classes.svg" alt="Dar aulas" />
           <span>Dar aulas</span>
         </a>
