--- a/study.html
+++ b/study.html
@@ -17,6 +17,13 @@
       rel="stylesheet"
     />
 
+    <!-- Favicon -->
+    <link
+      rel="shortcut icon"
+      href="./public/images/favicon.png"
+      type="image/png"
+    />
+
     <title>Proffy | Sua plataforma de estudos online</title>
   </head>
   <body id="study-page">
