chore: give-classes layout mobile and desktop

--- a/study.html
+++ b/study.html
@@ -6,7 +6,9 @@
 
     <!-- Cascade Styles Stylesheet -->
     <link rel="stylesheet" href="./public/styles/main.css" />
+    <link rel="stylesheet" href="./public/styles/partials/header.css" />
     <link rel="stylesheet" href="./public/styles/partials/study-page.css" />
+    <link rel="stylesheet" href="public/styles/partials/forms.css" />
 
     <!-- Fonts -->
 
