--- a/give-classes.html
+++ b/give-classes.html
@@ -111,7 +111,7 @@
           <fieldset id="schedule-items">
             <legend>
               Horários disponíveis
-              <button id="add-time">+ Novo horário</button>
+              <button id="add-time" type="button">+ Novo horário</button>
             </legend>
 
             <div class="schedule-item">
@@ -155,5 +155,7 @@
         </footer>
       </main>
     </div>
+
+    <script src="./public/script/main.js"></script>
   </body>
 </html>
